--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-*.class
+# ignore maven files
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# ignore logs
 *.log
+
+# ignore IntelliJ project files
+.idea/
