--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,7 @@
                         <!-- work-around for https://issues.scala-lang.org/browse/SI-8358 -->
                         <arg>-nobootcp</arg>
                     </args>
-                    <compilerPlugins>
-                        <compilerPlugin>
-                            <groupId>com.artima.supersafe</groupId>
-                            <artifactId>supersafe_${scalaVersion}</artifactId>
-                            <version>1.1.3</version>
-                        </compilerPlugin>
-                    </compilerPlugins>
+                    <scalaVersion>${scalaVersion}</scalaVersion>
                 </configuration>
             </plugin>
             <plugin>
